--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 org.gradle.jvmargs = -Xmx2G
 org.gradle.parallel = false
 
-group=org.example
+group=io.github.lukebemish.modularmetals
 version=1.0-SNAPSHOT
 
-mod_id=examplemod
-mod_name=Example Mod
+mod_id=modularmetals
+mod_name=Modular Metals
 mod_author=Luke Bemish
