--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ subprojects {
             url = 'https://maven.moddinginquisition.org/releases'
         }
         mavenCentral()
+        // For DynAssetGen and defaultresources
+        mavenLocal()
     }
 
     tasks.withType(JavaCompile).configureEach {
@@ -46,6 +48,7 @@ subprojects {
     }
 
     dependencies {
-        implementation libs.groovy
+        implementation libs.groovy.core
+        implementation libs.groovy.templates
     }
 }
