--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,25 +4,29 @@ parchment_minecraft = "1.19.2"
 parchment_mappings = "2022.08.14"
 quilt_loader = "0.17.4"
 
-qsl = "3.0.0-beta.14+1.19.2"
-groovyduvet = "1.1.0"
-cgl = "0.1.0"
+qfapi = "4.0.0-beta.11+0.60.0-1.19.2"
+groovyduvet = "1.1.1"
+cgl = "0.1.2"
+jankson = "1.2.1"
 
-gml = "1.1.3"
+gml = "1.2.0"
 
 groovy = "4.0.4"
-autoservice = "1.0.1"
 
 forge = "1.19.2-43.1.15"
 forgegradle = "5.1.+"
 librarian = "1.+"
 mixin = "0.8.5"
 
+dynassetgen = "1.1.0"
+defaultresources = "0.2.2"
+excavatedvariants = "1.0.4"
+
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
 quilt_loader = { module = "org.quiltmc:quilt-loader", version.ref = "quilt_loader" }
 
-qsl = { module = "org.quiltmc:qsl", version.ref = "qsl" }
+qfapi = { module = "org.quiltmc.quilted-fabric-api:quilted-fabric-api", version.ref = "qfapi" }
 groovyduvet_all = { module = "io.github.lukebemish.groovyduvet:groovyduvet", version.ref = "groovyduvet" }
 groovyduvet_groovy = { module = "io.github.lukebemish.groovyduvet:groovyduvet-groovy", version.ref = "groovyduvet" }
 cgl_common = { module = "io.github.groovymc.cgl:cgl-1.19.2", version.ref = "cgl" }
@@ -30,12 +34,25 @@ cgl_forge = { module = "io.github.groovymc.cgl:cgl-1.19.2-forge", version.ref = 
 cgl_quilt = { module = "io.github.groovymc.cgl:cgl-1.19.2-quilt", version.ref = "cgl" }
 
 gml = { module = "com.matyrobbrt.gml:gml", version.ref = "gml" }
+jankson = { module = "blue.endless:jankson", version.ref = "jankson" }
 
-groovy = { module = "org.apache.groovy:groovy", version.ref = "groovy" }
-autoservice = { module = "com.google.auto.service:auto-service", version.ref = "autoservice" }
+groovy_core = { module = "org.apache.groovy:groovy", version.ref = "groovy" }
+groovy_templates = { module = "org.apache.groovy:groovy-templates", version.ref = "groovy" }
 
 forge = { module = "net.minecraftforge:forge", version.ref = "forge" }
-mixin = { module = "org.spongepowered:mixin", version.ref = "mixin"}
+mixin = { module = "org.spongepowered:mixin", version.ref = "mixin" }
+
+dynassetgen_common = { module = "io.github.lukebemish.dynamic_asset_generator:dynamic_asset_generator-common-1.19.2", version.ref = "dynassetgen" }
+dynassetgen_quilt = { module = "io.github.lukebemish.dynamic_asset_generator:dynamic_asset_generator-quilt-1.19.2", version.ref = "dynassetgen" }
+dynassetgen_forge = { module = "io.github.lukebemish.dynamic_asset_generator:dynamic_asset_generator-forge-1.19.2", version.ref = "dynassetgen" }
+
+excavatedvariants_common = { module = "io.github.lukebemish.excavated_variants:excavated_variants-common-1.19.2", version.ref = "excavatedvariants" }
+excavatedvariants_quilt = { module = "io.github.lukebemish.excavated_variants:excavated_variants-quilt-1.19.2", version.ref = "excavatedvariants" }
+excavatedvariants_forge = { module = "io.github.lukebemish.excavated_variants:excavated_variants-forge-1.19.2", version.ref = "excavatedvariants" }
+
+defaultresources_common = { module = "io.github.lukebemish.defaultresources:defaultresources-common-1.19.2", version.ref = "defaultresources" }
+defaultresources_quilt = { module = "io.github.lukebemish.defaultresources:defaultresources-quilt-1.19.2", version.ref = "defaultresources" }
+defaultresources_forge = { module = "io.github.lukebemish.defaultresources:defaultresources-forge-1.19.2", version.ref = "defaultresources" }
 
 [plugins]
 quilt_loom = { id = "org.quiltmc.loom", version = "0.12.+" }
