--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/axe.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/axe.json5
@@ -45,6 +45,6 @@
   tags: [
     "fabric:axes"
   ],
-  attackModifier: 1.5,
-  speedModifier: -3.0,
+  attack_modifier: 6.0,
+  speed_modifier: -3.2,
 }
