--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/hoe.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/hoe.json5
@@ -45,6 +45,6 @@
   tags: [
     "fabric:hoes"
   ],
-  attackModifier: 1.5,
-  speedModifier: -3.0,
+  attack_modifier: 0,
+  speed_modifier: -3.0,
 }
