--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/pickaxe.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/pickaxe.json5
@@ -45,6 +45,6 @@
   tags: [
     "fabric:pickaxes"
   ],
-  attackModifier: 1.5,
-  speedModifier: -3.0,
+  attack_modifier: 1,
+  speed_modifier: -2.8,
 }
