--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/metals/silver.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/metals/silver.json5
@@ -1,16 +1,18 @@
 {
   texturing: {
-    type: "modularmetals:easy_recolor",
-    color: [
-      0xff233754,
-      0xff16263d,
-      0xff364761,
-      0xff415a80,
-      0xff4a6896,
-      0xff5f93b8,
-      0xff6fabc7,
-      0xffbfebff
-    ]
+    generator: {
+      type: "modularmetals:easy_recolor",
+      color: [
+        0xff233754,
+        0xff16263d,
+        0xff364761,
+        0xff415a80,
+        0xff4a6896,
+        0xff5f93b8,
+        0xff6fabc7,
+        0xffbfebff
+      ],
+    },
   },
   name: "Silver"
 }
