--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/sword.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/sword.json5
@@ -45,6 +45,6 @@
   tags: [
     "fabric:swords"
   ],
-  attackModifier: 1.5,
-  speedModifier: -3.0,
+  attack_modifier: 3,
+  speed_modifier: -2.4,
 }
