Working blocks, more fixes

--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/recipes/ingot_from_nuggets.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/recipes/ingot_from_nuggets.json5
@@ -14,11 +14,10 @@
       "###"
     ],
     result: {
-      item: "${items['modularmetals:ingot']}"
+      item: "${variants['modularmetals:ingot']}"
     }
   },
   required_variants: [
-    "modularmetals:ingot",
-    "modularmetals:nugget"
+    "modularmetals:ingot"
   ]
 }
