--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/recipes/ingot_to_nuggets.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/recipes/ingot_to_nuggets.json5
@@ -9,11 +9,10 @@
     ],
     result: {
       count: 9,
-      item: "${items['modularmetals:nugget']}"
+      item: "${variants['modularmetals:nugget']}"
     }
   },
   required_variants: [
-    "modularmetals:ingot",
     "modularmetals:nugget"
   ]
 }
