--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/nugget.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/nugget.json5
@@ -1,7 +1,15 @@
 {
   type: "modularmetals:item",
   texturing: {
-    template: "modularmetals:item/nugget_base"
+    template: {
+      "": {
+        type: "dynamic_asset_generator:palette_spread",
+        source: {
+          type: "dynamic_asset_generator:texture",
+          path: "minecraft:item/gold_nugget"
+        }
+      }
+    }
   },
   default_enabled: true,
   name: "Nugget",
