--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/pickaxe.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/pickaxe.json5
@@ -36,7 +36,7 @@
     model: {
       parent: "minecraft:item/handheld",
       textures: {
-        layer0: "${textures}"
+        layer0: "${textures['']}"
       }
     }
   },
