Begin update to 1.19.3

--- a/Common/build.gradle
+++ b/Common/build.gradle
@@ -38,6 +38,7 @@ tasks.withType(AbstractRemapJarTask).each {
 }
 
 groovydoc {
+    exclude 'mods.groovy'
     use = true
     docTitle = "${mod_name} v${version}"
 }
