--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,26 +1,27 @@
 [versions]
-minecraft = "1.19.2"
-parchment_minecraft = "1.19.2"
-parchment_mappings = "2022.08.14"
-quilt_loader = "0.17.4"
+minecraft = "1.19.3"
+parchment_minecraft = "1.19.3"
+parchment_mappings = "2022.12.18"
+quilt_loader = "0.18.1-beta.25"
 
-qfapi = "4.0.0-beta.11+0.60.0-1.19.2"
-groovyduvet = "1.1.1"
-cgl = "0.1.2"
+qfapi = "5.0.0-alpha.7+0.70.0-1.19.3"
+groovyduvet = "2.0.0"
+cgl = "0.2.1"
 jankson = "1.2.1"
 
 gml = "1.2.0"
 
-groovy = "4.0.4"
+groovy = "4.0.6"
 
-forge = "1.19.2-43.1.15"
-forgegradle = "5.1.+"
-librarian = "1.+"
+forge = "1.19.3-44.0.41"
 mixin = "0.8.5"
 
-dynassetgen = "1.1.0"
-defaultresources = "0.2.2"
-excavatedvariants = "1.0.4"
+dynassetgen = "3.0.1"
+defaultresources = "1.0.1"
+excavatedvariants = "2.0.1"
+
+autoservice = "1.0.1"
+autoextension = "0.1.1"
 
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
@@ -29,9 +30,9 @@ quilt_loader = { module = "org.quiltmc:quilt-loader", version.ref = "quilt_loade
 qfapi = { module = "org.quiltmc.quilted-fabric-api:quilted-fabric-api", version.ref = "qfapi" }
 groovyduvet_all = { module = "io.github.lukebemish.groovyduvet:groovyduvet", version.ref = "groovyduvet" }
 groovyduvet_groovy = { module = "io.github.lukebemish.groovyduvet:groovyduvet-groovy", version.ref = "groovyduvet" }
-cgl_common = { module = "io.github.groovymc.cgl:cgl-1.19.2", version.ref = "cgl" }
-cgl_forge = { module = "io.github.groovymc.cgl:cgl-1.19.2-forge", version.ref = "cgl" }
-cgl_quilt = { module = "io.github.groovymc.cgl:cgl-1.19.2-quilt", version.ref = "cgl" }
+cgl_common = { module = "io.github.groovymc.cgl:cgl-1.19.3", version.ref = "cgl" }
+cgl_forge = { module = "io.github.groovymc.cgl:cgl-1.19.3-forge", version.ref = "cgl" }
+cgl_quilt = { module = "io.github.groovymc.cgl:cgl-1.19.3-quilt", version.ref = "cgl" }
 
 gml = { module = "com.matyrobbrt.gml:gml", version.ref = "gml" }
 jankson = { module = "blue.endless:jankson", version.ref = "jankson" }
@@ -40,21 +41,24 @@ groovy_core = { module = "org.apache.groovy:groovy", version.ref = "groovy" }
 groovy_templates = { module = "org.apache.groovy:groovy-templates", version.ref = "groovy" }
 
 forge = { module = "net.minecraftforge:forge", version.ref = "forge" }
-mixin = { module = "org.spongepowered:mixin", version.ref = "mixin" }
 
-dynassetgen_common = { module = "io.github.lukebemish.dynamic_asset_generator:dynamic_asset_generator-common-1.19.2", version.ref = "dynassetgen" }
-dynassetgen_quilt = { module = "io.github.lukebemish.dynamic_asset_generator:dynamic_asset_generator-quilt-1.19.2", version.ref = "dynassetgen" }
-dynassetgen_forge = { module = "io.github.lukebemish.dynamic_asset_generator:dynamic_asset_generator-forge-1.19.2", version.ref = "dynassetgen" }
+dynassetgen_common = { module = "dev.lukebemish.dynamicassetgenerator:dynamicassetgenerator-common-1.19.3", version.ref = "dynassetgen" }
+dynassetgen_quilt = { module = "dev.lukebemish.dynamicassetgenerator:dynamicassetgenerator-quilt-1.19.3", version.ref = "dynassetgen" }
+dynassetgen_forge = { module = "dev.lukebemish.dynamicassetgenerator:dynamicassetgenerator-forge-1.19.3", version.ref = "dynassetgen" }
 
-excavatedvariants_common = { module = "io.github.lukebemish.excavated_variants:excavated_variants-common-1.19.2", version.ref = "excavatedvariants" }
-excavatedvariants_quilt = { module = "io.github.lukebemish.excavated_variants:excavated_variants-quilt-1.19.2", version.ref = "excavatedvariants" }
-excavatedvariants_forge = { module = "io.github.lukebemish.excavated_variants:excavated_variants-forge-1.19.2", version.ref = "excavatedvariants" }
+excavatedvariants_common = { module = "dev.lukebemish.excavatedvariants:excavatedvariants-common-1.19.3", version.ref = "excavatedvariants" }
+excavatedvariants_quilt = { module = "dev.lukebemish.excavatedvariants:excavatedvariants-quilt-1.19.3", version.ref = "excavatedvariants" }
+excavatedvariants_forge = { module = "dev.lukebemish.excavatedvariants:excavatedvariants-forge-1.19.3", version.ref = "excavatedvariants" }
 
-defaultresources_common = { module = "io.github.lukebemish.defaultresources:defaultresources-common-1.19.2", version.ref = "defaultresources" }
-defaultresources_quilt = { module = "io.github.lukebemish.defaultresources:defaultresources-quilt-1.19.2", version.ref = "defaultresources" }
-defaultresources_forge = { module = "io.github.lukebemish.defaultresources:defaultresources-forge-1.19.2", version.ref = "defaultresources" }
+defaultresources_common = { module = "dev.lukebemish.defaultresources:defaultresources-common-1.19.3", version.ref = "defaultresources" }
+defaultresources_quilt = { module = "dev.lukebemish.defaultresources:defaultresources-quilt-1.19.3", version.ref = "defaultresources" }
+defaultresources_forge = { module = "dev.lukebemish.defaultresources:defaultresources-forge-1.19.3", version.ref = "defaultresources" }
+
+autoservice = { module = "com.google.auto.service:auto-service", version.ref = "autoservice" }
+autoextension = { module = "dev.lukebemish.autoextension:autoextension", version.ref = "autoextension" }
 
 [plugins]
-quilt_loom = { id = "org.quiltmc.loom", version = "0.12.+" }
-forgegradle = {id = "net.minecraftforge.gradle", version.ref = "forgegradle"}
-librarian = {id = "org.parchmentmc.librarian.forgegradle", version.ref = "librarian"}
+quilt_loom = { id = "org.quiltmc.loom", version = "1.+" }
+forgegradle = {id = "net.minecraftforge.gradle", version = "5.1.+"}
+librarian = {id = "org.parchmentmc.librarian.forgegradle", version = "1.+"}
+mixin = {id = "org.spongepowered.mixin", version = "0.7.+"}
