Update some old functionality

--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/metals/silver.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/metals/silver.json5
@@ -15,6 +15,9 @@
       ],
     },
   },
+  categories: [
+    "modularmetals:metal"
+  ],
   name: "Silver",
   properties: {
     "modularmetals:oxide_generator": {
