Work on worldgen and creative tab

--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/recipes/ingot_to_nuggets.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/recipes/ingot_to_nuggets.json5
@@ -1,5 +1,5 @@
 {
-  type: "modularmetals:template",
+  type: "modularmetals:recipe",
   template: {
     type: "minecraft:crafting_shapeless",
     ingredients: [
