Working oxide system

--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/categories/metal.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/categories/metal.json5
@@ -7,7 +7,7 @@
     "modularmetals:sword",
     "modularmetals:ingot",
     "modularmetals:raw",
-    "modularmetals:raw_block",
+    //"modularmetals:raw_block",
     "modularmetals:block",
     "modularmetals:nugget"
   ],
