--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/recipes/ingot_to_nuggets.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/recipes/ingot_to_nuggets.json5
@@ -2,6 +2,7 @@
   type: "modularmetals:recipe",
   template: {
     type: "minecraft:crafting_shapeless",
+    category: "misc",
     ingredients: [
       {
         tag: "${platform == 'forge' ? ('forge:ingots/'+metal.path) : ('c:'+metal.path+'_ingots')}"
