--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/raw_block.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/raw_block.json5
@@ -9,7 +9,9 @@
           source: {
             type: "dynamic_asset_generator:texture",
             path: "minecraft:block/raw_iron_block"
-          }
+          },
+          lower_bound: 0.2,
+          upper_bound: 0.8
         },
         property: "modularmetals:oxide_generator",
         present: {
