Begin update to 1.19.4

--- a/Common/build.gradle
+++ b/Common/build.gradle
@@ -1,6 +1,4 @@
-plugins {
-    alias libs.plugins.quilt.loom
-}
+apply plugin: libs.plugins.quilt.loom.get().pluginId
 
 archivesBaseName = "${mod_id}-${libs.versions.minecraft.get()}"
 
