--- a/Quilt/build.gradle
+++ b/Quilt/build.gradle
@@ -1,7 +1,8 @@
 plugins {
-    alias libs.plugins.quilt.loom
     id 'idea'
 }
+
+apply plugin: libs.plugins.quilt.loom.get().pluginId
 
 archivesBaseName = "${mod_id}-${libs.versions.minecraft.get()}-quilt"
 
