--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 plugins {
     id 'io.github.groovymc.modsdotgroovy' version '1.1.2'
+    alias libs.plugins.quilt.loom apply false
 }
 
 modsDotGroovy {
-    dslVersion = '1.2.1'
+    dslVersion = '1.3.0'
     platform 'multiloader'
 }
 
