--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,24 +1,24 @@
 [versions]
-minecraft = "1.19.3"
+minecraft = "1.19.4"
 parchment_minecraft = "1.19.3"
-parchment_mappings = "2023.02.05"
-quilt_loader = "0.18.1-beta.74"
+parchment_mappings = "2023.03.12"
+quilt_loader = "0.18.5"
 
-qfapi = "5.0.0-beta.4+0.73.0-1.19.3"
-groovyduvet = "2.0.3"
-cgl = "0.2.2"
+qfapi = "6.0.0-beta.2+0.76.0-1.19.4"
+groovyduvet = "2.0.4"
+cgl = "0.2.3"
 jankson = "1.2.1"
 
-gml = "1.2.0"
+gml = "3.1.0"
 
-groovy = "4.0.8"
+groovy = "4.0.10"
 
-forge = "1.19.3-44.1.9"
+forge = "1.19.4-45.0.13"
 mixin = "0.8.5"
 
-dynassetgen = "3.0.2"
-defaultresources = "1.0.2"
-excavatedvariants = "2.0.1"
+dynassetgen = "3.0.3"
+defaultresources = "1.0.3"
+excavatedvariants = "2.2.1"
 
 autoservice = "1.0.1"
 autoextension = "0.1.1"
@@ -30,9 +30,9 @@ quilt_loader = { module = "org.quiltmc:quilt-loader", version.ref = "quilt_loade
 qfapi = { module = "org.quiltmc.quilted-fabric-api:quilted-fabric-api", version.ref = "qfapi" }
 groovyduvet_all = { module = "io.github.lukebemish.groovyduvet:groovyduvet", version.ref = "groovyduvet" }
 groovyduvet_groovy = { module = "io.github.lukebemish.groovyduvet:groovyduvet-groovy", version.ref = "groovyduvet" }
-cgl_common = { module = "io.github.groovymc.cgl:cgl-1.19.3", version.ref = "cgl" }
-cgl_forge = { module = "io.github.groovymc.cgl:cgl-1.19.3-forge", version.ref = "cgl" }
-cgl_quilt = { module = "io.github.groovymc.cgl:cgl-1.19.3-quilt", version.ref = "cgl" }
+cgl_common = { module = "io.github.groovymc.cgl:cgl-1.19.4", version.ref = "cgl" }
+cgl_forge = { module = "io.github.groovymc.cgl:cgl-1.19.4-forge", version.ref = "cgl" }
+cgl_quilt = { module = "io.github.groovymc.cgl:cgl-1.19.4-quilt", version.ref = "cgl" }
 
 gml = { module = "com.matyrobbrt.gml:gml", version.ref = "gml" }
 jankson = { module = "blue.endless:jankson", version.ref = "jankson" }
@@ -42,23 +42,23 @@ groovy_templates = { module = "org.apache.groovy:groovy-templates", version.ref 
 
 forge = { module = "net.minecraftforge:forge", version.ref = "forge" }
 
-dynassetgen_common = { module = "dev.lukebemish.dynamicassetgenerator:dynamicassetgenerator-common-1.19.3", version.ref = "dynassetgen" }
-dynassetgen_quilt = { module = "dev.lukebemish.dynamicassetgenerator:dynamicassetgenerator-quilt-1.19.3", version.ref = "dynassetgen" }
-dynassetgen_forge = { module = "dev.lukebemish.dynamicassetgenerator:dynamicassetgenerator-forge-1.19.3", version.ref = "dynassetgen" }
+dynassetgen_common = { module = "dev.lukebemish.dynamicassetgenerator:dynamicassetgenerator-common-1.19.4", version.ref = "dynassetgen" }
+dynassetgen_quilt = { module = "dev.lukebemish.dynamicassetgenerator:dynamicassetgenerator-quilt-1.19.4", version.ref = "dynassetgen" }
+dynassetgen_forge = { module = "dev.lukebemish.dynamicassetgenerator:dynamicassetgenerator-forge-1.19.4", version.ref = "dynassetgen" }
 
-excavatedvariants_common = { module = "dev.lukebemish.excavatedvariants:excavatedvariants-common-1.19.3", version.ref = "excavatedvariants" }
-excavatedvariants_quilt = { module = "dev.lukebemish.excavatedvariants:excavatedvariants-quilt-1.19.3", version.ref = "excavatedvariants" }
-excavatedvariants_forge = { module = "dev.lukebemish.excavatedvariants:excavatedvariants-forge-1.19.3", version.ref = "excavatedvariants" }
+excavatedvariants_common = { module = "dev.lukebemish.excavatedvariants:excavatedvariants-common-1.19.4", version.ref = "excavatedvariants" }
+excavatedvariants_quilt = { module = "dev.lukebemish.excavatedvariants:excavatedvariants-quilt-1.19.4", version.ref = "excavatedvariants" }
+excavatedvariants_forge = { module = "dev.lukebemish.excavatedvariants:excavatedvariants-forge-1.19.4", version.ref = "excavatedvariants" }
 
-defaultresources_common = { module = "dev.lukebemish.defaultresources:defaultresources-common-1.19.3", version.ref = "defaultresources" }
-defaultresources_quilt = { module = "dev.lukebemish.defaultresources:defaultresources-quilt-1.19.3", version.ref = "defaultresources" }
-defaultresources_forge = { module = "dev.lukebemish.defaultresources:defaultresources-forge-1.19.3", version.ref = "defaultresources" }
+defaultresources_common = { module = "dev.lukebemish.defaultresources:defaultresources-common-1.19.4", version.ref = "defaultresources" }
+defaultresources_quilt = { module = "dev.lukebemish.defaultresources:defaultresources-quilt-1.19.4", version.ref = "defaultresources" }
+defaultresources_forge = { module = "dev.lukebemish.defaultresources:defaultresources-forge-1.19.4", version.ref = "defaultresources" }
 
 autoservice = { module = "com.google.auto.service:auto-service", version.ref = "autoservice" }
 autoextension = { module = "dev.lukebemish.autoextension:autoextension", version.ref = "autoextension" }
 
 [plugins]
-quilt_loom = { id = "org.quiltmc.loom", version = "1.0.+" }
+quilt_loom = { id = "org.quiltmc.loom", version = "1.1.+" }
 forgegradle = {id = "net.minecraftforge.gradle", version = "5.1.+"}
 librarian = {id = "org.parchmentmc.librarian.forgegradle", version = "1.+"}
 mixin = {id = "org.spongepowered.mixin", version = "0.7.+"}
