--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,8 +5,8 @@ parchment_mappings = "2023.03.12"
 quilt_loader = "0.18.5"
 
 qfapi = "6.0.0-beta.2+0.76.0-1.19.4"
-groovyduvet = "2.0.4"
-cgl = "0.2.3"
+groovyduvet = "2.0.5"
+cgl = "0.2.4"
 jankson = "1.2.1"
 
 gml = "3.1.0"
@@ -62,3 +62,4 @@ quilt_loom = { id = "org.quiltmc.loom", version = "1.1.+" }
 forgegradle = {id = "net.minecraftforge.gradle", version = "5.1.+"}
 librarian = {id = "org.parchmentmc.librarian.forgegradle", version = "1.+"}
 mixin = {id = "org.spongepowered.mixin", version = "0.7.+"}
+logfilter = {id = "dev.lukebemish.logfilter", version = "0.1.+"}
