--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/pickaxe.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/pickaxe.json5
@@ -42,7 +42,8 @@
   },
   name: "Pickaxe",
   tags: [
-    "fabric:pickaxes"
+    "fabric:pickaxes",
+    "minecraft:pickaxes"
   ],
   attack_modifier: 1,
   speed_modifier: -2.8,
