--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/sword.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/sword.json5
@@ -42,7 +42,8 @@
   },
   name: "Sword",
   tags: [
-    "fabric:swords"
+    "fabric:swords",
+    "minecraft:swords"
   ],
   attack_modifier: 3,
   speed_modifier: -2.4,
