Add InstanceMap system

--- a/Quilt/build.gradle
+++ b/Quilt/build.gradle
@@ -63,6 +63,8 @@ dependencies {
     compileOnly(project(path: ":Common", configuration: "namedElements")) {
         exclude group: 'org.quiltmc'
     }
+
+    compileOnly project(':Common').sourceSets.transform.output
 }
 
 tasks.withType(GroovyCompile) {
