--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/block.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/block.json5
@@ -20,6 +20,15 @@
     "${properties['modularmetals:needed_material']?.with { tierTag(resourceLocation(it)).toString() }?:'minecraft:needs_iron_tool'}",
     "minecraft:mineable/pickaxe"
   ],
+  block_properties: {
+    requires_correct_tool_for_drops: true,
+    destroy_time: ```
+    (properties['modularmetals:destroy_multiple']?:1.0)*3.0
+    ```,
+    explosion_resistance: {
+      __value__: "(properties['modularmetals:explosion_multiple']?:properties['modularmetals:destroy_multiple']?:1.0)*5.0"
+    }
+  },
   loot_table: {
     type: "minecraft:block",
     pools: [
