Filters, queues, and clean-up

--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/axe.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/axe.json5
@@ -1,5 +1,6 @@
 {
   type: "modularmetals:axe",
+  inherit: "modularmetals:metal_item",
   texturing: {
     template: "modularmetals:item/axe_base",
     generator: {
