--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/block.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/block.json5
@@ -1,5 +1,6 @@
 {
   type: "modularmetals:block",
+  inherit: "modularmetals:metal_item",
   texturing: {
     template: {
       "": {
@@ -17,16 +18,16 @@
     "forge:storage_blocks",
     "c:%s_blocks",
     "c:blocks/%s",
-    "${properties['modularmetals:needed_material']?.with { tierTag(resourceLocation(it)).toString() }?:'minecraft:needs_iron_tool'}",
+    "${properties['modularmetals:needed_material']?.with { tierTag(it) }?:'minecraft:needs_iron_tool'}",
     "minecraft:mineable/pickaxe"
   ],
   block_properties: {
     requires_correct_tool_for_drops: true,
-    destroy_time: ```
-    (properties['modularmetals:destroy_multiple']?:1.0)*3.0
-    ```,
+    destroy_time: {
+      __code__: "(properties['modularmetals:destroy_multiplier']?:1.0)*3.0"
+    },
     explosion_resistance: {
-      __value__: "(properties['modularmetals:explosion_multiple']?:properties['modularmetals:destroy_multiple']?:1.0)*5.0"
+      __code__: "(properties['modularmetals:explosion_multiplier']?: properties['modularmetals:destroy_multiplier']?: 1.0)*6.0"
     }
   },
   loot_table: {
