--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/hoe.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/hoe.json5
@@ -1,5 +1,6 @@
 {
   type: "modularmetals:hoe",
+  inherit: "modularmetals:metal_item",
   texturing: {
     template: "modularmetals:item/hoe_base",
     generator: {
