--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/raw_block.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/raw_block.json5
@@ -82,6 +82,10 @@
   ],
   block_properties: {
     requires_correct_tool_for_drops: true,
+    material: "stone",
+    "material_color": {
+      __optional__: "properties['modularmetals:block_material_color'] ?: Optional.empty()"
+    },
     destroy_time: {
       __code__: "(properties['modularmetals:destroy_multiplier']?:1.0)*5.0"
     },
