--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ subprojects {
         it.groovyOptions.optimizationOptions.indy = true
         it.groovyOptions.optimizationOptions.groovydoc = true
         it.groovyOptions.javaAnnotationProcessing = true
-        it.groovyOptions.keepStubs = true // for debugging
+        //it.groovyOptions.keepStubs = true // for debugging
         it.groovyOptions.configurationScript = rootProject.file('compile.groovy')
         it.exclude('mods.groovy')
     }
