More improvements on armor system

--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/categories/metal.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/categories/metal.json5
@@ -9,7 +9,8 @@
     "modularmetals:raw",
     "modularmetals:raw_block",
     "modularmetals:block",
-    "modularmetals:nugget"
+    "modularmetals:nugget",
+    "modularmetals:helmet",
   ],
   recipes: [
     // crafting
