Make armor texturing functional

--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/categories/metal.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/categories/metal.json5
@@ -11,6 +11,9 @@
     "modularmetals:block",
     "modularmetals:nugget",
     "modularmetals:helmet",
+    "modularmetals:chestplate",
+    "modularmetals:leggings",
+    "modularmetals:boots"
   ],
   recipes: [
     // crafting
