--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/chestplate.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/chestplate.json5
@@ -7,7 +7,7 @@
         type: "dynamic_asset_generator:palette_spread",
         source: {
           type: "dynamic_asset_generator:texture",
-          path: "minecraft:item/golden_helmet"
+          path: "minecraft:item/golden_chestplate"
         }
       },
       armor1: {
@@ -22,14 +22,14 @@
             }
           },
           total_size: 64,
-          start_x: 0,
-          start_y: 0,
-          size_x: 64,
+          start_x: 16,
+          start_y: 16,
+          size_x: 48,
           size_y: 16
         },
-        total_size: 64,
-        start_x: 0,
-        start_y: 0,
+        total_size: 48,
+        start_x: -16,
+        start_y: -16,
         size_x: 64,
         size_y: 64
       }
@@ -58,6 +58,6 @@
       }
     }
   },
-  name: "Helmet",
-  armor_type: "helmet"
+  name: "Chestplate",
+  armor_type: "chestplate"
 }
