--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/leggings.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/variants/leggings.json5
@@ -7,25 +7,17 @@
         type: "dynamic_asset_generator:palette_spread",
         source: {
           type: "dynamic_asset_generator:texture",
-          path: "minecraft:item/golden_helmet"
+          path: "minecraft:item/golden_leggings"
         }
       },
-      armor1: {
+      armor2: {
         type: "dynamic_asset_generator:crop",
         input: {
-          type: "dynamic_asset_generator:crop",
-          input: {
-            type: "dynamic_asset_generator:palette_spread",
-            source: {
-              type: "dynamic_asset_generator:texture",
-              path: "minecraft:models/armor/gold_layer_1"
-            }
-          },
-          total_size: 64,
-          start_x: 0,
-          start_y: 0,
-          size_x: 64,
-          size_y: 16
+          type: "dynamic_asset_generator:palette_spread",
+          source: {
+            type: "dynamic_asset_generator:texture",
+            path: "minecraft:models/armor/gold_layer_2"
+          }
         },
         total_size: 64,
         start_x: 0,
@@ -38,13 +30,13 @@
       "": {
         type: "modularmetals:resolved"
       },
-      armor1: {
+      armor2: {
         type: "dynamic_asset_generator:crop",
         input: {
           type: "modularmetals:with_template",
           template: {
             type: "modularmetals:template",
-            template: "armor1"
+            template: "armor2"
           },
           source: {
             type: "modularmetals:resolved"
@@ -58,6 +50,6 @@
       }
     }
   },
-  name: "Helmet",
-  armor_type: "helmet"
+  name: "Leggings",
+  armor_type: "leggings"
 }
