Initial work on ores and added if template syntax

--- a/Common/src/main/resources/defaultresources/modularmetals/modularmetals/metals/silver.json5
+++ b/Common/src/main/resources/defaultresources/modularmetals/modularmetals/metals/silver.json5
@@ -16,7 +16,7 @@
     },
   },
   categories: [
-    "modularmetals:metal"
+    "modularmetals:stone_ore_metal"
   ],
   name: "Silver",
   properties: {
